fix(config): avoid Java 11 String#isBlank in ConfigParseException